--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Added by Travis 12/21/2017
+.idea/ 
+.vscode/
+lib/
+
 # Runtime data
 pids
 *.pid
