--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A NPM package that exports functions to mask values.",
   "main": "build/index.js",
   "scripts": {
-    "build": "babel ./src -d ./lib"
+    "build": "npm run lint && babel ./src -d ./lib",
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,10 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
   },
   "dependencies": {},
   "babel": {
