supporting one more digit and adding Travis

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "babel ./src -d ./lib",
     "lint": "eslint ./src",
-    "test": "nyc mocha --require babel-core/register",
-    "prepublish": "npm run build"
+    "test": "nyc mocha --require babel-core/register"
   },
   "repository": {
     "type": "git",
